-------------------------------------------------------------------------------
Changes in version 1.022

- Added a generic installer program, similar to the "install" program
  included with ezmlm.

- Fixed the instshow library to use and dispaly the install prefix just
  like the other instlib programs.

- The installers now automatically create missing directories.

- Added path_mkdirs function.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.021

- Fixed typo bug in str_catfv and str_copyfv that caused failures on (at
  least) PPC and S390 architectures.  Thanks Gerrit Pape.

- Fixed 32-to-64 bit sign extension bug in fmt_multi on some 64-bit
  platforms.  Thanks Gerrit Pape.

- installer/instcheck program libraries now optionally install into a
  prefix directory specified on the command line or with
  $install_prefix (which can be set on the make command line).

- Installation is now done under seperate include/lib directories.

- Added sysdep for "extern int daylight" (replaced by a macro if not
  present).

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.020

- Fixed a couple of length counting bugs in the fmt number code.

- Added multiple-item formatting functions fmt_multi (similar to printf,
  but safer), fmt_multiv, obuf_putf, str_catf, and str_copyf, as well as
  a set of formatted message functions.

Note: As of this version, a C99-compatible compiler is required to build
the software.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.019
