@@ -7,7 +7,8 @@ Changes in version 1.022
 - Fixed the instshow library to use and dispaly the install prefix just
   like the other instlib programs.
 
-- The installers now automatically create missing directories.
+- The installers now automatically create missing directories, and
+  installs into temporary files that get renamed.
 
 - Added path_mkdirs function.
 
